컨텐츠 만지는중 - 중간커밋

--- a/Contents/Contents.vcxproj
+++ b/Contents/Contents.vcxproj
@@ -341,11 +341,24 @@
   <ItemGroup>
     <ClCompile Include="Application\Game.cpp" />
     <ClCompile Include="Application\GameApp.cpp" />
+    <ClCompile Include="Scenes\EndScene.cpp" />
     <ClCompile Include="Scenes\MenuScene.cpp" />
+    <ClCompile Include="Scenes\SelectScene.cpp" />
+    <ClCompile Include="Scenes\Stage1.cpp" />
+    <ClCompile Include="Scenes\Stage2.cpp" />
+    <ClCompile Include="Scenes\Stage3.cpp" />
+    <ClCompile Include="Scenes\TitleScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\GameApp.h" />
+    <ClInclude Include="Scenes\EndScene.h" />
     <ClInclude Include="Scenes\MenuScene.h" />
+    <ClInclude Include="Scenes\SelectScene.h" />
+    <ClInclude Include="Scenes\Stage1.h" />
+    <ClInclude Include="Scenes\Stage2.h" />
+    <ClInclude Include="Scenes\Stage3.h" />
+    <ClInclude Include="Scenes\TitleScene.h" />
+    <ClInclude Include="Scripts\SceneCore.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
