--- a/Contents/Contents.vcxproj
+++ b/Contents/Contents.vcxproj
@@ -341,6 +341,8 @@
   <ItemGroup>
     <ClCompile Include="Application\Game.cpp" />
     <ClCompile Include="Application\GameApp.cpp" />
+    <ClCompile Include="Objects\Stage\NodeObject.cpp" />
+    <ClCompile Include="Objects\TestObject.cpp" />
     <ClCompile Include="Scenes\EndScene.cpp" />
     <ClCompile Include="Scenes\MenuScene.cpp" />
     <ClCompile Include="Scenes\SelectScene.cpp" />
@@ -351,6 +353,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\GameApp.h" />
+    <ClInclude Include="Objects\Stage\NodeObject.h" />
+    <ClInclude Include="Objects\TestObject.h" />
     <ClInclude Include="Scenes\EndScene.h" />
     <ClInclude Include="Scenes\MenuScene.h" />
     <ClInclude Include="Scenes\SelectScene.h" />
