--- a/Contents/Contents.vcxproj.filters
+++ b/Contents/Contents.vcxproj.filters
@@ -10,6 +10,30 @@
     <Filter Include="Scripts">
       <UniqueIdentifier>{b7a83ec4-ae2b-4804-a48e-e0eec54c2aca}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Objects">
+      <UniqueIdentifier>{1dd4e186-6f63-442e-8e5a-9977f84cb2fe}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Objects\TitleScene">
+      <UniqueIdentifier>{58ad0f72-a0f3-43ae-bd4b-e0f20430317b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Objects\EndScene">
+      <UniqueIdentifier>{0a575401-185b-4db7-90a4-55a20f5f029d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Objects\MenuScene">
+      <UniqueIdentifier>{774717f3-9570-482e-8052-dea77393eb06}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Objects\Stage">
+      <UniqueIdentifier>{4d699e70-f2ca-4084-91ca-79a5a1eea7f3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Objects\SelectScene">
+      <UniqueIdentifier>{2c2bdabf-7125-4214-8ae9-e42aa67304ac}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Scene\.h">
+      <UniqueIdentifier>{9eff161a-10d2-4685-9fa3-c8045f3120d7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Scene\.cpp">
+      <UniqueIdentifier>{268f4596-4b94-42fb-af54-1c620c1b15c0}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application\Game.cpp">
@@ -18,55 +42,67 @@
     <ClCompile Include="Application\GameApp.cpp">
       <Filter>App</Filter>
     </ClCompile>
-    <ClCompile Include="Scenes\MenuScene.cpp">
-      <Filter>Scene</Filter>
-    </ClCompile>
     <ClCompile Include="Scenes\EndScene.cpp">
-      <Filter>Scene</Filter>
+      <Filter>Scene\.cpp</Filter>
+    </ClCompile>
+    <ClCompile Include="Scenes\MenuScene.cpp">
+      <Filter>Scene\.cpp</Filter>
     </ClCompile>
     <ClCompile Include="Scenes\SelectScene.cpp">
-      <Filter>Scene</Filter>
+      <Filter>Scene\.cpp</Filter>
     </ClCompile>
     <ClCompile Include="Scenes\Stage1.cpp">
-      <Filter>Scene</Filter>
+      <Filter>Scene\.cpp</Filter>
     </ClCompile>
     <ClCompile Include="Scenes\Stage2.cpp">
-      <Filter>Scene</Filter>
+      <Filter>Scene\.cpp</Filter>
     </ClCompile>
     <ClCompile Include="Scenes\Stage3.cpp">
-      <Filter>Scene</Filter>
+      <Filter>Scene\.cpp</Filter>
     </ClCompile>
     <ClCompile Include="Scenes\TitleScene.cpp">
-      <Filter>Scene</Filter>
+      <Filter>Scene\.cpp</Filter>
+    </ClCompile>
+    <ClCompile Include="Objects\Stage\NodeObject.cpp">
+      <Filter>Objects\Stage</Filter>
+    </ClCompile>
+    <ClCompile Include="Objects\TestObject.cpp">
+      <Filter>Objects</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\GameApp.h">
       <Filter>App</Filter>
     </ClInclude>
-    <ClInclude Include="Scenes\MenuScene.h">
-      <Filter>Scene</Filter>
-    </ClInclude>
-    <ClInclude Include="Scenes\EndScene.h">
-      <Filter>Scene</Filter>
-    </ClInclude>
-    <ClInclude Include="Scenes\SelectScene.h">
-      <Filter>Scene</Filter>
-    </ClInclude>
-    <ClInclude Include="Scenes\Stage1.h">
-      <Filter>Scene</Filter>
-    </ClInclude>
-    <ClInclude Include="Scenes\Stage2.h">
-      <Filter>Scene</Filter>
-    </ClInclude>
-    <ClInclude Include="Scenes\Stage3.h">
-      <Filter>Scene</Filter>
-    </ClInclude>
     <ClInclude Include="Scripts\SceneCore.h">
       <Filter>Scripts</Filter>
     </ClInclude>
+    <ClInclude Include="Scenes\EndScene.h">
+      <Filter>Scene\.h</Filter>
+    </ClInclude>
+    <ClInclude Include="Scenes\MenuScene.h">
+      <Filter>Scene\.h</Filter>
+    </ClInclude>
+    <ClInclude Include="Scenes\SelectScene.h">
+      <Filter>Scene\.h</Filter>
+    </ClInclude>
+    <ClInclude Include="Scenes\Stage1.h">
+      <Filter>Scene\.h</Filter>
+    </ClInclude>
+    <ClInclude Include="Scenes\Stage2.h">
+      <Filter>Scene\.h</Filter>
+    </ClInclude>
+    <ClInclude Include="Scenes\Stage3.h">
+      <Filter>Scene\.h</Filter>
+    </ClInclude>
     <ClInclude Include="Scenes\TitleScene.h">
-      <Filter>Scene</Filter>
+      <Filter>Scene\.h</Filter>
+    </ClInclude>
+    <ClInclude Include="Objects\Stage\NodeObject.h">
+      <Filter>Objects\Stage</Filter>
+    </ClInclude>
+    <ClInclude Include="Objects\TestObject.h">
+      <Filter>Objects</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
