--- a/Contents/Contents.vcxproj
+++ b/Contents/Contents.vcxproj
@@ -342,6 +342,8 @@
     <ClCompile Include="Application\Game.cpp" />
     <ClCompile Include="Application\GameApp.cpp" />
     <ClCompile Include="Objects\InputObject.cpp" />
+    <ClCompile Include="Objects\Manager\PatternManager.cpp" />
+    <ClCompile Include="Objects\MouseTrailObject.cpp" />
     <ClCompile Include="Objects\Stage\NodeObject.cpp" />
     <ClCompile Include="Objects\TestObject.cpp" />
     <ClCompile Include="Scenes\EndScene.cpp" />
@@ -355,6 +357,8 @@
   <ItemGroup>
     <ClInclude Include="Application\GameApp.h" />
     <ClInclude Include="Objects\InputObject.h" />
+    <ClInclude Include="Objects\Manager\PatternManager.h" />
+    <ClInclude Include="Objects\MouseTrailObject.h" />
     <ClInclude Include="Objects\Stage\NodeObject.h" />
     <ClInclude Include="Objects\TestObject.h" />
     <ClInclude Include="Scenes\EndScene.h" />
