--- a/WorkSpace/ASB/ASB.vcxproj
+++ b/WorkSpace/ASB/ASB.vcxproj
@@ -371,6 +371,7 @@
     <ClCompile Include="LogicTestManager\BettleManager.cpp" />
     <ClCompile Include="LiveObject\Player.cpp" />
     <ClCompile Include="CsvData\DataClass\PlayerData.cpp" />
+    <ClCompile Include="Component\StateController.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CsvData\DataStorage\CsvDataStorage.h" />
@@ -386,6 +387,7 @@
     <ClInclude Include="LiveObject\Player.h" />
     <ClInclude Include="CsvData\DataClass\PlayerData.h" />
     <ClInclude Include="LogicTestManager\BettleManager.h" />
+    <ClInclude Include="Component\StateController.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
