카메라 흔들림 줌 효과 추가
흔들림 기능을 사용할때는 MonoBehavior에 추가한 카메라의 Update에 함수 구현필요
(카메라의 헤더에 상세사용법)
카메라의 줌기능은 키입력(이벤트)에 따라 ZoomCameraToPoint(현재마우스위치, 줌in, out 수치) 2개의 매개변수를 전달해주면됨 ( 카메라의 헤더에 상세사용법)

--- a/WorkSpace/KJH/KJH.vcxproj
+++ b/WorkSpace/KJH/KJH.vcxproj
@@ -343,6 +343,7 @@
     <ClCompile Include="game.cpp" />
     <ClCompile Include="DataStorage\NodeData.cpp" />
     <ClCompile Include="DataStorage\DataClass\PlayerData.cpp" />
+    <ClCompile Include="Script\MainCam.cpp" />
     <ClCompile Include="Scene\TestScene.cpp" />
     <ClCompile Include="Script\MusicScript.cpp" />
     <ClCompile Include="Script\TestObject.cpp" />
@@ -356,6 +357,7 @@
     <ClInclude Include="DataStorage\DataClass\EnemyAtkPattenData.h" />
     <ClInclude Include="DataStorage\NodeData.h" />
     <ClInclude Include="DataStorage\DataClass\PlayerData.h" />
+    <ClInclude Include="Script\MainCam.h" />
     <ClInclude Include="Scene\TestScene.h" />
     <ClInclude Include="Script\MusicScript.h" />
     <ClInclude Include="Script\TestObject.h" />
