--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -295,6 +295,9 @@
     <ClInclude Include="Components\Rendering\SliceRenderer.h">
       <Filter>Components\Rendering</Filter>
     </ClInclude>
+    <ClInclude Include="Components\Rendering\ChainDrawerComponent.h">
+      <Filter>Components\Rendering</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application\Application.cpp">
@@ -457,6 +460,9 @@
       <Filter>Components\Rendering</Filter>
     </ClCompile>
     <ClCompile Include="Components\Rendering\SliceRenderer.cpp">
+      <Filter>Components\Rendering</Filter>
+    </ClCompile>
+    <ClCompile Include="Components\Rendering\ChainDrawerComponent.cpp">
       <Filter>Components\Rendering</Filter>
     </ClCompile>
   </ItemGroup>
