--- a/WorkSpace/ASB/ASB.vcxproj
+++ b/WorkSpace/ASB/ASB.vcxproj
@@ -372,6 +372,7 @@
     <ClCompile Include="LiveObject\Player.cpp" />
     <ClCompile Include="CsvData\DataClass\PlayerData.cpp" />
     <ClCompile Include="Component\StateController.cpp" />
+    <ClCompile Include="LogicTestManager\AttackPatternManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CsvData\DataStorage\CsvDataStorage.h" />
@@ -388,6 +389,7 @@
     <ClInclude Include="CsvData\DataClass\PlayerData.h" />
     <ClInclude Include="LogicTestManager\BettleManager.h" />
     <ClInclude Include="Component\StateController.h" />
+    <ClInclude Include="LogicTestManager\AttackPatternManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
