--- a/WorkSpace/ASB/ASB.vcxproj.filters
+++ b/WorkSpace/ASB/ASB.vcxproj.filters
@@ -16,6 +16,7 @@
     <ClCompile Include="CsvData\DataClass\EnemyData.cpp" />
     <ClCompile Include="CsvData\DataClass\PlayerData.cpp" />
     <ClCompile Include="Component\StateController.cpp" />
+    <ClCompile Include="LogicTestManager\AttackPatternManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameLogicTestScene\GameLogicTestScene.h" />
@@ -32,5 +33,6 @@
     <ClInclude Include="CsvData\DataClass\PlayerData.h" />
     <ClInclude Include="LogicTestManager\BettleManager.h" />
     <ClInclude Include="Component\StateController.h" />
+    <ClInclude Include="LogicTestManager\AttackPatternManager.h" />
   </ItemGroup>
 </Project>
