--- a/Contents/Contents.vcxproj
+++ b/Contents/Contents.vcxproj
@@ -346,6 +346,7 @@
     <ClCompile Include="Objects\Manager\PatternManager.cpp" />
     <ClCompile Include="Objects\MenuScene\MenuSceneBGI.cpp" />
     <ClCompile Include="Objects\MouseTrailObject.cpp" />
+    <ClCompile Include="Objects\PatternControlObject.cpp" />
     <ClCompile Include="Objects\SelectScene\SelectSceneBGI.cpp" />
     <ClCompile Include="Objects\Stage\NodeObject.cpp" />
     <ClCompile Include="Objects\Stage\StageBGI.cpp" />
@@ -366,6 +367,7 @@
     <ClInclude Include="Objects\Manager\PatternManager.h" />
     <ClInclude Include="Objects\MenuScene\MenuSceneBGI.h" />
     <ClInclude Include="Objects\MouseTrailObject.h" />
+    <ClInclude Include="Objects\PatternControlObject.h" />
     <ClInclude Include="Objects\SelectScene\SelectSceneBGI.h" />
     <ClInclude Include="Objects\Stage\NodeObject.h" />
     <ClInclude Include="Objects\Stage\StageBGI.h" />
