--- a/Contents/Contents.vcxproj
+++ b/Contents/Contents.vcxproj
@@ -360,6 +360,19 @@
     <ClCompile Include="Scenes\Stage2.cpp" />
     <ClCompile Include="Scenes\Stage3.cpp" />
     <ClCompile Include="Scenes\TitleScene.cpp" />
+    <ClCompile Include="Scripts\Component\StateController.cpp" />
+    <ClCompile Include="Scripts\CsvData\CsvDataManager.cpp" />
+    <ClCompile Include="Scripts\CsvData\DataClass\AllNodePattenClass.cpp" />
+    <ClCompile Include="Scripts\CsvData\DataClass\BaseData.cpp" />
+    <ClCompile Include="Scripts\CsvData\DataClass\EnemyAtkPattenData.cpp" />
+    <ClCompile Include="Scripts\CsvData\DataClass\EnemyData.cpp" />
+    <ClCompile Include="Scripts\CsvData\DataClass\PlayerData.cpp" />
+    <ClCompile Include="Scripts\CsvData\DataStorage\CsvDataStorage.cpp" />
+    <ClCompile Include="Scripts\LiveObject\Enemy.cpp" />
+    <ClCompile Include="Scripts\LiveObject\LiveObject.cpp" />
+    <ClCompile Include="Scripts\LiveObject\Player.cpp" />
+    <ClCompile Include="Scripts\LogicManager\AttackPatternManager.cpp" />
+    <ClCompile Include="Scripts\LogicManager\BettleManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\GameApp.h" />
@@ -382,7 +395,25 @@
     <ClInclude Include="Scenes\Stage2.h" />
     <ClInclude Include="Scenes\Stage3.h" />
     <ClInclude Include="Scenes\TitleScene.h" />
+    <ClInclude Include="Scripts\Component\StateController.h" />
+    <ClInclude Include="Scripts\CsvData\CsvDataManager.h" />
+    <ClInclude Include="Scripts\CsvData\DataClass\AllNodePattenClass.h" />
+    <ClInclude Include="Scripts\CsvData\DataClass\BaseData.h" />
+    <ClInclude Include="Scripts\CsvData\DataClass\EnemyAtkPattenData.h" />
+    <ClInclude Include="Scripts\CsvData\DataClass\EnemyData.h" />
+    <ClInclude Include="Scripts\CsvData\DataClass\PlayerData.h" />
+    <ClInclude Include="Scripts\CsvData\DataStorage\CsvDataStorage.h" />
+    <ClInclude Include="Scripts\LiveObject\Enemy.h" />
+    <ClInclude Include="Scripts\LiveObject\LiveObject.h" />
+    <ClInclude Include="Scripts\LiveObject\Player.h" />
+    <ClInclude Include="Scripts\LogicManager\AttackPatternManager.h" />
+    <ClInclude Include="Scripts\LogicManager\BettleManager.h" />
     <ClInclude Include="Scripts\SceneCore.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ASB\ASB.vcxproj" />
+    <None Include="ASB\ASB.vcxproj.filters" />
+    <None Include="ASB\ASB.vcxproj.user" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
