--- a/Contents/Contents.vcxproj.filters
+++ b/Contents/Contents.vcxproj.filters
@@ -105,6 +105,20 @@
     <ClCompile Include="Objects\SliceObject.cpp">
       <Filter>Objects</Filter>
     </ClCompile>
+    <ClCompile Include="ASB\game.cpp" />
+    <ClCompile Include="Scripts\Component\StateController.cpp" />
+    <ClCompile Include="Scripts\CsvData\DataClass\AllNodePattenClass.cpp" />
+    <ClCompile Include="Scripts\CsvData\DataClass\BaseData.cpp" />
+    <ClCompile Include="Scripts\CsvData\DataClass\EnemyAtkPattenData.cpp" />
+    <ClCompile Include="Scripts\CsvData\DataClass\EnemyData.cpp" />
+    <ClCompile Include="Scripts\CsvData\DataClass\PlayerData.cpp" />
+    <ClCompile Include="Scripts\CsvData\DataStorage\CsvDataStorage.cpp" />
+    <ClCompile Include="Scripts\CsvData\CsvDataManager.cpp" />
+    <ClCompile Include="Scripts\LiveObject\Enemy.cpp" />
+    <ClCompile Include="Scripts\LiveObject\LiveObject.cpp" />
+    <ClCompile Include="Scripts\LiveObject\Player.cpp" />
+    <ClCompile Include="Scripts\LogicManager\AttackPatternManager.cpp" />
+    <ClCompile Include="Scripts\LogicManager\BettleManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\GameApp.h">
@@ -170,5 +184,23 @@
     <ClInclude Include="Objects\SliceObject.h">
       <Filter>Objects</Filter>
     </ClInclude>
+    <ClInclude Include="Scripts\Component\StateController.h" />
+    <ClInclude Include="Scripts\CsvData\DataClass\AllNodePattenClass.h" />
+    <ClInclude Include="Scripts\CsvData\DataClass\BaseData.h" />
+    <ClInclude Include="Scripts\CsvData\DataClass\EnemyData.h" />
+    <ClInclude Include="Scripts\CsvData\DataClass\EnemyAtkPattenData.h" />
+    <ClInclude Include="Scripts\CsvData\DataClass\PlayerData.h" />
+    <ClInclude Include="Scripts\CsvData\DataStorage\CsvDataStorage.h" />
+    <ClInclude Include="Scripts\CsvData\CsvDataManager.h" />
+    <ClInclude Include="Scripts\LiveObject\Enemy.h" />
+    <ClInclude Include="Scripts\LiveObject\LiveObject.h" />
+    <ClInclude Include="Scripts\LiveObject\Player.h" />
+    <ClInclude Include="Scripts\LogicManager\AttackPatternManager.h" />
+    <ClInclude Include="Scripts\LogicManager\BettleManager.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ASB\ASB.vcxproj" />
+    <None Include="ASB\ASB.vcxproj.filters" />
+    <None Include="ASB\ASB.vcxproj.user" />
   </ItemGroup>
 </Project>
