--- a/WorkSpace/KJH/KJH.vcxproj
+++ b/WorkSpace/KJH/KJH.vcxproj
@@ -340,6 +340,8 @@
     <ClCompile Include="DataStorage\DataClass\AllNodePattenClass.cpp" />
     <ClCompile Include="DataStorage\DataClass\EnemyAtkPattenData.cpp" />
     <ClCompile Include="Component\EffectComponent.cpp" />
+    <ClCompile Include="Script\Manager\EffectManager.cpp" />
+    <ClCompile Include="Script\EffectObject.cpp" />
     <ClCompile Include="game.cpp" />
     <ClCompile Include="DataStorage\NodeData.cpp" />
     <ClCompile Include="DataStorage\DataClass\PlayerData.cpp" />
@@ -357,6 +359,8 @@
     <ClInclude Include="DataStorage\NodeData.h" />
     <ClInclude Include="DataStorage\DataClass\PlayerData.h" />
     <ClInclude Include="Component\EffectComponent.h" />
+    <ClInclude Include="Script\Manager\EffectManager.h" />
+    <ClInclude Include="Script\EffectObject.h" />
     <ClInclude Include="Script\MainCam.h" />
     <ClInclude Include="Scene\TestScene.h" />
     <ClInclude Include="Script\MusicScript.h" />
