--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -341,6 +341,16 @@
     <ClInclude Include="Components\Collision\CircleCollider.h" />
     <ClInclude Include="Components\Rendering\ParticleRenderer.h" />
     <ClInclude Include="Components\Rendering\LineRenderer.h" />
+    <ClInclude Include="External\Imgui\imconfig.h" />
+    <ClInclude Include="External\Imgui\imgui.h" />
+    <ClInclude Include="External\Imgui\imgui_impl_dx11.h" />
+    <ClInclude Include="External\Imgui\imgui_impl_win32.h" />
+    <ClInclude Include="External\Imgui\imgui_internal.h" />
+    <ClInclude Include="External\Imgui\imstb_rectpack.h" />
+    <ClInclude Include="External\Imgui\imstb_textedit.h" />
+    <ClInclude Include="External\Imgui\imstb_truetype.h" />
+    <ClInclude Include="Platform\ImguiModule.h" />
+    <ClInclude Include="Platform\ImguiManager.h" />
     <ClInclude Include="Math\EasingFunction.h" />
     <ClInclude Include="Math\GameRandom.h" />
     <ClInclude Include="Components\UI\Slider.h" />
@@ -428,6 +438,14 @@
     <ClCompile Include="Components\Rendering\ParticleRenderer.cpp" />
     <ClCompile Include="Components\Rendering\LineRenderer.cpp" />
     <ClCompile Include="Datas\SoundDatas.cpp" />
+    <ClCompile Include="External\Imgui\imgui.cpp" />
+    <ClCompile Include="External\Imgui\imgui_draw.cpp" />
+    <ClCompile Include="External\Imgui\imgui_impl_dx11.cpp" />
+    <ClCompile Include="External\Imgui\imgui_impl_win32.cpp" />
+    <ClCompile Include="External\Imgui\imgui_tables.cpp" />
+    <ClCompile Include="External\Imgui\imgui_widgets.cpp" />
+    <ClCompile Include="Platform\ImguiModule.cpp" />
+    <ClCompile Include="Platform\ImguiManager.cpp" />
     <ClCompile Include="Math\EasingFunction.cpp" />
     <ClCompile Include="Math\GameRandom.cpp" />
     <ClCompile Include="Components\UI\Slider.cpp" />
