--- a/Contents/Contents.vcxproj
+++ b/Contents/Contents.vcxproj
@@ -341,6 +341,7 @@
   <ItemGroup>
     <ClCompile Include="Application\Game.cpp" />
     <ClCompile Include="Application\GameApp.cpp" />
+    <ClCompile Include="Scripts\Test\ImguiModuleTest.cpp" />
     <ClCompile Include="Objects\EndScene\EndSceneBGI.cpp" />
     <ClCompile Include="Objects\InputObject.cpp" />
     <ClCompile Include="Objects\Manager\PatternManager.cpp" />
@@ -376,6 +377,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\GameApp.h" />
+    <ClInclude Include="Scripts\Test\ImguiModuleTest.h" />
     <ClInclude Include="Objects\EndScene\EndSceneBGI.h" />
     <ClInclude Include="Objects\InputObject.h" />
     <ClInclude Include="Objects\Manager\PatternManager.h" />
